# fastapi

./: .bumpversion.cfg  .cruft.json  .editorconfig  .gitignore  .gitlab-ci.yml  .mdformat.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 0176567ad929_modify_table_visitors_splitting_visits_.py  08ffd8f8878a_modify_table_visitors_adding_strt_and_.py  1_create_schema_and_tables.py  3220c42dd31e_create_tables_parks_species_visitors_.py  6414c769b1ba_create_first_revision.py  8d45c8cb5197_modify_table_species_splitting_species_.py
er_diagram/: database_er_diagram.drawio
fastapi_application/: core.py
fastapi_application/app/: api_utils.py  main.py
fastapi_application/app/api/endpoints/: dummy.py  parks.py  visitor.py
fastapi_application/app/core/: security.py
fastapi_application/app/db/: db_utils.py  session.py
fastapi_application/app/models/: __init__.py  base.py  conservation_efforts.py  dummy_orm.py  geometry_facilities.py  geometry_parks.py  parks.py  parks_facilities.py  parks_species.py  parks_visits.py  species.py  visitors.py
fastapi_application/app/schemas/: schemas.py
fastapi_application/app/tests/: conftest.py
notebooks/: load_data.py  notebook_template.py
ricardo/ee/fastapi/: __init__.py  core.py
ricardo/ee/fastapi/app/: api_utils.py  main.py
ricardo/ee/fastapi/app/api/api_v1/endpoints/: parks.py  species.py  visitor.py
ricardo/ee/fastapi/app/api/api_v1/routers/: routers.py
ricardo/ee/fastapi/app/api/endpoints/: parks.py  visitor.py
ricardo/ee/fastapi/app/api/routers/: routers.py
ricardo/ee/fastapi/app/db/: base.py  init_db.py  session.py  utils.py
ricardo/ee/fastapi/app/models/: __init__.py  base.py  conservation_effort.py  conservation_efforts.py  parks.py  parks_facilities.py  parks_species.py  parks_visits.py  species.py  visitor.py  visitors.py  visits.py
ricardo/ee/fastapi/app/schemas/: schemas.py
ricardo/ee/fastapi_app/: core.py
ricardo/ee/fastapi_app/app/: main.py
ricardo/ee/fastapi_app/app/api/endpoints/: dummy.py  parks.py  species.py  visitor.py
ricardo/ee/fastapi_app/app/api/routers/: routers.py
ricardo/ee/fastapi_app/app/core/: config.py
ricardo/ee/fastapi_app/app/db/: db_utils.py  session.py
ricardo/ee/fastapi_app/app/models/: __init__.py  base.py  conservation_efforts.py  dummy_orm.py  parks.py  parks_facilities.py  parks_species.py  parks_visits.py  species.py  visitors.py
ricardo/ee/fastapi_app/app/tests/: conftest.py  test_core.py
ricardo/ee/fastapi_app/tests/: test_core.py
